--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,10 @@ jobs:
           sudo apt-get install libvlc-dev
           sudo apt-get install libvlccore-dev
           haxelib setup ~/haxelib
-          haxelib remove flixel
-          haxelib install flixel 4.11.0
+          haxelib remove flixel-addons
+          haxelib install flixel-addons 2.11.0
+          haxelib remove flixel-ui
+          haxelib install flixel-ui 2.4.0
           haxelib install hxcpp > /dev/null --quiet
           haxelib install hmm --quiet
           haxelib run hmm install
@@ -62,8 +64,10 @@ jobs:
       - name: Install Haxelib
         run: |
           haxelib setup C:/haxelib
-          haxelib remove flixel
-          haxelib install flixel 4.11.0
+          haxelib remove flixel-addons
+          haxelib install flixel-addons 2.11.0
+          haxelib remove flixel-ui
+          haxelib install flixel-ui 2.4.0
           haxelib install hxcpp > /dev/null --quiet
           haxelib install hmm --quiet
           haxelib run hmm install
@@ -91,8 +95,10 @@ jobs:
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
-          haxelib remove flixel
-          haxelib install flixel 4.11.0
+          haxelib remove flixel-addons
+          haxelib install flixel-addons 2.11.0
+          haxelib remove flixel-ui
+          haxelib install flixel-ui 2.4.0
           haxelib install hxcpp > /dev/null --quiet
           haxelib install hmm --quiet
           haxelib run hmm install
