--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,11 +34,19 @@ jobs:
           sudo apt-get install libvlc-dev
           sudo apt-get install libvlccore-dev
           haxelib setup ~/haxelib
-          haxelib remove flixel-ui
-          haxelib install flixel-ui 2.4.0
           haxelib install hxcpp > /dev/null --quiet
           haxelib install hmm --quiet
           haxelib run hmm install
+          haxelib remove hxCodec
+          haxelib install hxCodec 2.5.1
+          haxelib remove openfl
+          haxelib install openfl 9.3.0
+          haxelib remove flixel
+          haxelib install flixel 4.11.0
+          haxelib remove flixel-addons
+          haxelib install flixel-addons 2.11.0
+          haxelib remove flixel-ui
+          haxelib install flixel-ui 2.4.0
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
@@ -62,11 +70,19 @@ jobs:
       - name: Install Haxelib
         run: |
           haxelib setup C:/haxelib
-          haxelib remove flixel-ui
-          haxelib install flixel-ui 2.4.0
           haxelib install hxcpp > /dev/null --quiet
           haxelib install hmm --quiet
           haxelib run hmm install
+          haxelib remove hxCodec
+          haxelib install hxCodec 2.5.1
+          haxelib remove openfl
+          haxelib install openfl 9.3.0
+          haxelib remove flixel
+          haxelib install flixel 4.11.0
+          haxelib remove flixel-addons
+          haxelib install flixel-addons 2.11.0
+          haxelib remove flixel-ui
+          haxelib install flixel-ui 2.4.0
         shell: cmd
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
@@ -91,11 +107,19 @@ jobs:
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
-          haxelib remove flixel-ui
-          haxelib install flixel-ui 2.4.0
           haxelib install hxcpp > /dev/null --quiet
           haxelib install hmm --quiet
           haxelib run hmm install
+          haxelib remove hxCodec
+          haxelib install hxCodec 2.5.1
+          haxelib remove openfl
+          haxelib install openfl 9.3.0
+          haxelib remove flixel
+          haxelib install flixel 4.11.0
+          haxelib remove flixel-addons
+          haxelib install flixel-addons 2.11.0
+          haxelib remove flixel-ui
+          haxelib install flixel-ui 2.4.0
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
